<resources>
    <string name="app_name">WatcHogs</string>
    <string name="Enter_email">Enter Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_have_account">Don\'t have an account? Register Now</string>
    <string name="login">Login</string>
    <string name="ragistor_to_your_account">Register your account</string>
    <string name="Enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an account? Login Now</string>
    <string name="select_your_type">Select Your Type</string>
    <string name="signup">Sign Up</string>
    <string name="enter_company_details">Enter Company Details</string>
    <string name="Enter_billing_address">Enter Billing Address</string>
    <string name="Enter_company_text_number">Enter Company Tax Number</string>
    <string name="Enter_company_phone_number">Enter Company Phone Number</string>
    <string name="Enter_country">Enter Country</string>
    <string name="Enter_company_address">Enter Company Address</string>
    <string name="Enter_company_name">Enter Company Name</string>
    <string name="compnay_heading_to_select_company">"Select Company "</string>
    <string name="delete">Delete</string>
    <string name="add_check_points">Add Check Points</string>
    <string name="tap_to_enter_and_time">Tap to enter date and time</string>
    <string name="fill_out_following_info">Fill out following info</string>
    <string name="save">SAVE</string>
    <string name="Enter_title">Enter Title</string>
    <string name="update">Update</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_value_found">No Value Found</string>
    <string name="check_point_added">Check point Added</string>
    <string name="please_add_message">Please add a massage</string>
    <string name="please_add_all_data">Please add all data</string>
    <string name="data_updated">Data Updated</string>
    <string name="is_getting_live_location">is getting your live location</string>
    <string name="service_stoped">Service Stopped</string>
    <string name="current_location">Current Location</string>
    <string name="authentation_failed">Authentication failed</string>
    <string name="add_an_image_to">Please select an image too.</string>
    <string name="add_company_data">Please Add all company data</string>
    <string name="password_not_match">Password not match</string>
    <string name="something_went_wrong">Some thing went wrong</string>
    <string name="are_you_sure_to_delete_route">Are you sure to delete the route?</string>
    <string name="yes">es</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="status">"Status : "</string>
    <string name="client_passed">Client passed</string>
    <string name="user_passes_at">" user passed the check points at : "</string>
    <string name="user_passes_time_not_avalible">"User pass time not available "</string>
    <string name="clients_not_passed_yet">"Client not passed yet "</string>
    <string name="enter_message_hare">Enter massage hare</string>
    <string name="company_owner">Company Owner</string>
    <string name="employee">Employee</string>
    <string name="chat">Chat</string>
    <string name="clear_route">Clear route</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="employee_list">Employee list</string>
    <string name="check_points">Check Points</string>
    <string name="my_company">My Company</string>
    <string name="sign_out">Sign Out</string>
</resources>