<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">
    <TextView
        android:id="@+id/upper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ragistor_to_your_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_13sdp"
        android:layout_margin="@dimen/_10sdp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upper_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:id="@+id/profile_image"
                android:src="@drawable/img"
                android:layout_marginTop="@dimen/_5sdp" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_name"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_email"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/enter_password"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/confrim_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/confirm_password"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_type"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:layout_margin="@dimen/_10sdp"
                />
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal"
                android:background="@drawable/border_bg"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/rb_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_owner"
                    android:textColor="@color/colorPrimaryDark"
                    android:checked="true"
                    android:textSize="@dimen/_11sdp"/>
                <RadioButton
                    android:id="@+id/rb_employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee"
                    android:textColor="@color/colorPrimaryDark"

                    android:textSize="@dimen/_11sdp"
                    android:layout_marginLeft="@dimen/_10sdp"/>

            </RadioGroup>
            <TextView
                android:id="@+id/company_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_company_details"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp"
                android:layout_margin="@dimen/_10sdp" />
            <Spinner
                android:id="@+id/company_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_name"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_country"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_phone_number"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="phone" />
            <EditText
                android:id="@+id/company_text_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_text_number"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="text" />
            <EditText
                android:id="@+id/company_billing_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_billing_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="text" />
            <RelativeLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_selector"
                android:elevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    />
                <ProgressBar
                    android:theme="@style/ProgressBarStyle"
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/login_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>