<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15sdp"
        android:layout_margin="@dimen/_10sdp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/watchogs"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/border_bg"
        android:hint="@string/Enter_email"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/border_bg"
        android:hint="@string/enter_password"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:inputType="textPassword"/>

    <RelativeLayout
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_35sdp"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/button_selector"
    android:elevation="@dimen/_10sdp"
    android:outlineSpotShadowColor="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white" />
    <ProgressBar
        android:theme="@style/ProgressBarStyle"
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
    <TextView
        android:id="@+id/sign_up_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp" />


</LinearLayout>