<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/company_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_company_details"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp"
                android:layout_margin="@dimen/_10sdp" />
            <Spinner
                android:id="@+id/company_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_name"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_country"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/company_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_phone_number"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="phone" />
            <EditText
                android:id="@+id/company_text_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_company_text_number"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="text" />
            <EditText
                android:id="@+id/company_billing_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:background="@drawable/border_bg"
                android:hint="@string/Enter_billing_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="text" />
            <RelativeLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_selector"
                android:elevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    />
                <ProgressBar
                    android:theme="@style/ProgressBarStyle"
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>