<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_out_following_info"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/border_bg"
        android:hint="@string/Enter_title"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:inputType="text" />
    <EditText
        android:id="@+id/date_and_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/border_bg"
        android:hint="@string/tap_to_enter_and_time"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@drawable/border_bg"
        android:hint="@string/tap_to_enter_and_time"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/disable_black"
        android:inputType="textEmailAddress" />
    <RelativeLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/button_selector"
        android:elevation="@dimen/_10sdp"
        android:outlineSpotShadowColor="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</LinearLayout>