<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEmployeeRouteActivity">
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:text="@string/app_name"/>
    </RelativeLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:layout_above="@+id/bottom_layout"/>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/top_rounded_bg"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:id="@+id/profile_image"
            android:src="@drawable/img"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_centerVertical="true"
            android:text="asdads"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_10sdp">

            <Button
                android:id="@+id/chat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector"
                android:textColor="@color/white"
                android:text="@string/chat"
                android:textSize="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_5sdp"/>
            <Button
                android:id="@+id/clear_route"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector"
                android:textColor="@color/white"
                android:text="@string/clear_route"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_5sdp"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>